toggle regions on map

--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,9 @@
     <responsive-child>
 
       <div class="buttons">
-        <div class="button" data-region="asia">Asia</div>
         <div class="button" data-region="americas">Americas</div>
         <div class="button" data-region="ema">Europe, Middle East, Africa</div>
+        <div class="button" data-region="asia">Asia</div>
       </div>
 
       <div class="container">
@@ -26,9 +26,7 @@
           </div>
         </div>
 
-        <div class="info-container">
-          Hello.
-        </div>
+        <div class="info-container"></div>
 
       </div>
     </responsive-child>
