--- a/src/js/_infobox.html
+++ b/src/js/_infobox.html
@@ -1,1 +1,4 @@
-<%= data %>
+<div class="hed"><%= data.Order %>. <%= data.Location %></div>
+<div><strong>Company:</strong> <em><%= data.Company %></em></div>
+<div><strong>Parent:</strong> <em><%= data.Parent %></em></div>
+<div class="loophole"><%= data.Why %></div>
