--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,9 @@
           </div>
         </div>
 
-        <div class="info-container"></div>
+        <div class="info-container">
+          Choose a region.
+        </div>
 
       </div>
     </responsive-child>
