color the current marker

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
               <map-options>
                 { "maxZoom": 6 }
               </map-options>
-              <tile-layer layer="cartoPositron"></tile-layer>
+              <tile-layer id="tiles" layer="cartoPositron"></tile-layer>
             </leaflet-map>
           </div>
         </div>
