--- a/src/js/_infobox.html
+++ b/src/js/_infobox.html
@@ -6,17 +6,21 @@
 <div class="loophole"><%= data.Why %></div>
 
 <div class="bars">
+  Microsoft's tax rate
   <div class="microsoft bar" style="width: <%= data.Microsoft %>%"></div>
+  Local corporate income tax
   <div class="local bar" style="width: <%= data.Local %>%"></div>
 </div>
 
-<div class="previous">
-  <div class="inner">
-    <i class="fa fa-long-arrow-left"></i> <span class="label">PREVIOUS</span>
+<div class="navigation">
+  <div class="previous">
+    <div class="inner">
+      <i class="fa fa-long-arrow-left"></i> <span class="label">PREVIOUS</span>
+    </div>
   </div>
-</div>
-<div class="next">
-  <div class="inner">
-    <span class="label">NEXT</span> <i class="fa fa-long-arrow-right"></i>
+  <div class="next">
+    <div class="inner">
+      <span class="label">NEXT</span> <i class="fa fa-long-arrow-right"></i>
+    </div>
   </div>
 </div>
