--- a/src/js/_infobox.html
+++ b/src/js/_infobox.html
@@ -1,4 +1,8 @@
-<div class="hed"><%= data.Order %>. <%= data.Location %></div>
+<div class="hed">
+  <div class="previous arrow disabled"><i class="fa fa-chevron-left"></i></div>
+  <div class="title"><div class="number"><%= data.Order %></div> <%= data.Location %></div>
+  <div class="next arrow"><i class="fa fa-chevron-right"></i></div>
+</div>
 
 <div><strong>Company:</strong> <em><%= data.Company %></em></div>
 <div><strong>Parent:</strong> <em><%= data.Parent %></em></div>
@@ -10,17 +14,4 @@
   <div class="microsoft bar" style="width: <%= data.Microsoft %>%"></div>
   Local corporate income tax
   <div class="local bar" style="width: <%= data.Local %>%"></div>
-</div>
-
-<div class="navigation">
-  <div class="previous">
-    <div class="inner">
-      <i class="fa fa-long-arrow-left"></i> <span class="label">PREVIOUS</span>
-    </div>
-  </div>
-  <div class="next">
-    <div class="inner">
-      <span class="label">NEXT</span> <i class="fa fa-long-arrow-right"></i>
-    </div>
-  </div>
 </div>
