button color toggles

--- a/src/index.html
+++ b/src/index.html
@@ -14,9 +14,9 @@
       <div class="outer">
 
         <div class="buttons">
-          <div class="button" data-region="americas">Americas</div>
-          <div class="button" data-region="ema">Europe, Middle East, Africa</div>
-          <div class="button" data-region="asia">Asia</div>
+          <div class="selected button" data-region="americas">Americas</div>
+          <div class="selected button" data-region="ema">Europe, Middle East, Africa</div>
+          <div class="selected button" data-region="asia">Asia</div>
         </div>
 
         <div class="container">
