--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,11 @@
           </div>
 
         </div>
+
+        <div class="credits">
+          <div><em>Sources: tktktk</em></div>
+          <div>AUDREY CARLSEN / THE SEATTLE TIMES</div>
+        </div>
       </div>
     </responsive-child>
 
