--- a/src/index.html
+++ b/src/index.html
@@ -38,9 +38,9 @@
              
             <div class="paragraph">By conducting sales from places with small populations and low tax rates, and routing some profit through virtually tax-free jurisdictions like Bermuda, Microsoft has cut billions of dollars from its tax bill over the last decade.</div>
              
-            <div class="select-paragraph paragraph"><em><span class="select">Select a region below</span> to follow the lengthy path that a Microsoft sale can take.</em></div>
+            <div class="select-paragraph paragraph"><em><span class="select">Select a region below</span> to follow the convoluted path that a Microsoft sale can take.</em></div>
 
-            <div class="mobile-view paragraph"><em><span class="select">Select a region above</span> to follow the lengthy path that a Microsoft sale can take.</em></div>
+            <div class="mobile-view paragraph"><em><span class="select">Select a region above</span> to follow the convoluted path that a Microsoft sale can take.</em></div>
           </div>
 
         </div>
@@ -53,8 +53,8 @@
         </div>
 
         <div class="credits">
-          <div><em>Sources: Court documents, Microsoft filings</em></div>
-          <div>AUDREY CARLSEN / THE SEATTLE TIMES</div>
+          <div><em>Sources: U.S. District Court, Microsoft annual reports, U.S. Senate Permanent Subcommittee on Investigations, Ireland Companies Registration Office, Companies House (U.K.), Australian Senate Economics Reference Committee, Income Tax Appellate Tribunal (India), Australian Securities and Investment Commission</em></div>
+          <div class="credit-name">AUDREY CARLSEN / THE SEATTLE TIMES</div>
         </div>
       </div>
     </responsive-child>
