--- a/src/js/_infobox.html
+++ b/src/js/_infobox.html
@@ -1,11 +1,11 @@
 <div class="hed">
-  <div class="previous arrow disabled"><i class="fa fa-chevron-left"></i></div>
+  <div class="previous arrow disabled"><i class="left fa fa-chevron-left"></i></div>
   <div class="title">
     <div class="number"><%= data.Order %></div> 
     <div><%= data.Company %></div>
     <div class="location"><%= data.Location %></div>
   </div>
-  <div class="next arrow"><i class="fa fa-chevron-right"></i></div>
+  <div class="next arrow"><i class="right fa fa-chevron-right"></i></div>
 </div>
 
 <div class="loophole"><%= data.Why %></div>
