--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,7 @@
         </div>
 
         <div class="credits">
-          <div><em>Sources: U.S. District Court, Microsoft annual reports, U.S. Senate Permanent Subcommittee on Investigations, Ireland Companies Registration Office, Companies House (U.K.), Australian Senate Economics Reference Committee, Income Tax Appellate Tribunal (India), Australian Securities and Investment Commission</em></div>
+          <div><em>Sources: U.S. District Court documents, Microsoft annual reports, U.S. Senate Permanent Subcommittee on Investigations, Ireland Companies Registration Office, Companies House (U.K.), Australian Senate Economics Reference Committee, Income Tax Appellate Tribunal (India), Australian Securities and Investment Commission</em></div>
           <div class="credit-name">AUDREY CARLSEN / THE SEATTLE TIMES</div>
         </div>
       </div>
